tests/baselines/reference/parserES5ComputedPropertyName11.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName11.ts(2,4): error TS1168: Computed property names are not allowed in method overloads.
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName11.ts(2,4): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName11.ts (2 errors) ====
    class C {
       [e]();
       ~~~
!!! error TS1168: Computed property names are not allowed in method overloads.
       ~~~
!!! error TS9002: Computed property names are not currently supported.
    }